BJS2-84050 сделал : - внес правки на коментарии